crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__backticked_group_key_quotes_verbatim.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | stats count() by `where`\")"
---
SELECT "where", COUNT(*) AS "count"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
GROUP BY "where"
