crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__backticked_table_fields_quote_verbatim.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | table `request id`, `http-status`\")"
---
SELECT "request id", "http-status"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
