crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__error_last_with_earliest.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_err(r#\"last=1h earliest=\"2026-03-14T00:00:00Z\"\"#)"
---
unsupported operation: cannot combine 'last=' with 'earliest='/'latest='
