crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__error_level_in_sort.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_err(\"* | sort -level\")"
---
unsupported operation: 'level' is a filter-only alias for the numeric severity column, not a stored column — it works in comparisons only (level=error, where level >= "warn"); to group, project or sort use severity (the number) or severity_text (the original text)
